--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
             </div>
         </div>
     </div>
+    <footer class=" text-center text-lg-start">
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
+            Copyright © |
+            <a class="text-body" href="https://jm-softwaredv.web.app/">Coded by Jimmy Muñoz</a>
+        </div>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
